@@ -54,6 +54,7 @@
 - Fix: [#19379] “No platforms” station style shows platforms on the Junior Roller Coaster.
 - Fix: [#19380] Startup crash when no sequences are installed and random sequences are enabled.
 - Fix: [#19391] String corruption caused by an improper buffer handling in ‘GfxWrapString’.
+- Fix: [#19434, #19509] Object types added by OpenRCT2 do not get removed when executing ‘remove_unused_objects’.
 - Fix: [#19475] Cannot increase loan when more than £1000 in debt.
 - Fix: [#19493] SV4 saves not importing the correct vehicle colours.
 - Fix: [#19517] Crash when peeps try to exit or enter hacked rides that have no waypoints specified.
